--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: ""
+baseurl: /ericlikedis.github.io
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -72,7 +72,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.myanimelist.net/images/about_me/ranking_items/13754149-0b09a8dd-ac4d-4481-909d-5248c4eb6e28.jpg?t=1689714274
+avatar: 
 
 # boolean type, the global switch for TOC in posts.
 toc: true
