--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,10 @@ timezone: America/Chicago
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: neo's brain # the main title
+title: Eric Reymundo # the main title
 
-tagline: just a bunch of technical write ups and notes. # it will display as the sub-title
+tagline: Cloud Security Engineer | This blog serves as a place for me to publish technical writeups and passion projects. :) - Enjoy
+        
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
