--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,9 @@ timezone: America/Chicago
 title: Eric Reymundo # the main title
 
 tagline: Cloud Security Engineer | This blog serves as a place for me to publish technical writeups and passion projects. :) - Enjoy
-        
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Blog for technical writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: https://ericlikedis.github.io
