fix: added dependency installation to `pages-deploy.yml`
CI currently does not install the Jekyll theme Gem. This adds this to the workflow.

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -45,6 +45,9 @@ jobs:
           ruby-version: 3
           bundler-cache: true
 
+      - name: Install dependencies
+        run: bundle install
+
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
         env:
