--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,23 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: America/New_York
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Chul Seung Lee # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Chul's Portfolio Website # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Chul's Portfolio Website
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://chuljja.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: chuljja # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -37,12 +37,12 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Chul Seung Lee
+  email: fpsemfaos@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://github.com/chuljja # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -76,7 +76,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://media.licdn.com/dms/image/C4D03AQE6zUO_0DcbJg/profile-displayphoto-shrink_400_400/0/1655912766818?e=1701907200&v=beta&t=E1dPq19AxwzXzIQYa-7TMsrldZ0w9wIgBTZCQPsM5AA
 
 # boolean type, the global switch for TOC in posts.
 toc: true
