changed x to insta

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ url: "https://chuljja.github.io"
 github:
   username: chuljja # change to your github username
 
-twitter:
+instagram:
   username: twitter_username # change to your twitter username
 
 social:
