--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ url: "https://chuljja.github.io"
 github:
   username: chuljja # change to your github username
 
-instagram:
-  username: twitter_username # change to your twitter username
+twitter:
+  username: chuljja999 # change to your twitter username
 
 social:
   # Change to your full name.
@@ -40,11 +40,11 @@ social:
   email: fpsemfaos@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
+    - https://www.instagram.com/chuljja999 # change to your twitter homepage
     - https://github.com/chuljja # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/chulseung-lee
 
 google_site_verification: # fill in to your verification string
 
