new imgs and post

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ url: "https://chuljja.github.io"
 github:
   username: chuljja # change to your github username
 
-twitter:
+instagram:
   username: chuljja999 # change to your twitter username
 
 social:
@@ -65,7 +65,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: # [light|dark]
+theme_mode: dark # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
