--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,15 @@ tagline: A text-focused Jekyll theme # it will display as the sub-title
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
-# Fill in the protocol & hostname for your site.
+# Fill in the protocol & hostname for your site (optional).
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
+
+# The base URL of your site (optional).
+# For project site, put "/your-repo-name", e.g. "/chirpy-starter"
+# See also:
+# - https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#types-of-github-pages-sites
+baseurl: ""
 
 github:
   username: github_username # change to your github username
@@ -124,9 +130,6 @@ pwa:
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
 
 paginate: 10
-
-# The base URL of your site
-baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
