--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,11 @@ tagline: A text-focused Jekyll theme # it will display as the sub-title
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
-# Fill in the protocol & hostname for your site (optional).
+# Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
 
-# The base URL of your site (optional).
-# For project site, put "/your-repo-name", e.g. "/chirpy-starter"
-# See also:
-# - https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#types-of-github-pages-sites
+# The base URL of your site
 baseurl: ""
 
 github:
