--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn:
+cdn: https://cdn.statically.io/gh/AzimsTech/AzimsTech.github.io/master/
 
 # the avatar on sidebar, support local or CORS resources
 avatar: https://github.com/azimstech.png
