--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,14 +1,22 @@
 #  The contact options.
 
+- type: youtube
+  icon: "fab fa-youtube"
+  url: "https://www.youtube.com/@kozenetpro"
+  
+- type: linkedin
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.linkedin.com/in/rubens-jean-simon/'  # Fill with your Linkedin homepage
+
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+#- type: twitter
+#  icon: "fa-brands fa-x-twitter"
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+# - type: email
+#   icon: "fas fa-envelope"
+#   noblank: true # open link in current tab
 
 - type: rss
   icon: "fas fa-rss"
