Update default path

--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,7 @@ collections:
 
 defaults:
   - scope:
-      path: "" # An empty string here means all files in the project
+      path: "/assets/img/posts/" # An empty string here means all files in the project
       type: posts
     values:
       layout: post
