Update `tagline` key

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Kuala_Lumpur
 
 title: AzimsTech # the main title
 
-tagline: Sharing Free Knowledge! # it will display as the sub-title
+tagline: Sharing Free Knowledge!✨ # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   I share everything new that I learn recently. No fluff, just straight-up tutorials, guides, and articles for every level. Whether you’re a newbie or a pro, you’ll find something useful here. 
