--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ description: >- # used by seo meta and the atom feed
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
 
+# Whether to publish posts with a future date
+future: false
+
 github:
   username: github_username # change to your GitHub username
 
