--- a/_config.yml
+++ b/_config.yml
@@ -9,44 +9,44 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Kuala_Lumpur
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: AmcaQt # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: CyberSecurity Enthusiast # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Just a Chill Guy who love I.T
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://amcaqt.github.io/"
 
 github:
-  username: github_username # change to your GitHub username
+  username: AmcaQt # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: AmcaYuri # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Fahim Amsyar
+  email: amcaqt06@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/AmcaYuri # change to your Twitter homepage
+    - https://github.com/AmcaQt # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: smuSHrikZ_0e065Z_vP9LaT2wYu533e4PJZwsKohTNw # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
