--- a/_config.yml
+++ b/_config.yml
@@ -146,8 +146,8 @@ pwa:
     # shares the same domain name as the current website.
     deny_paths:
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
-      - "/mysoftwarelist/*"
-      - "/OpenWrt-Builder/*"
+      - "/mysoftwarelist"
+      - "/OpenWrt-Builder"
 
 paginate: 10
 
