--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ tagline: AI Student | Flutter Developer | Dream Chaser
 description: >-
   A portfolio to showcase my work in AI, websites, mobile apps, university assignments, and more.
 
-url: "https://acxy_official.github.io"
+url: "https://seriously88.github.io/"
 baseurl: ""
 
 # Social & Author Info
