--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: 
+cdn: https://cdn.jsdelivr.net/gh/AzimsTech/compress/azimstech.github.io
 
 # the avatar on sidebar, support local or CORS resources
 avatar: https://github.com/azimstech.png
