--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,9 +2,16 @@
 
 - type: github
   icon: "fab fa-github"
+  url: "https://github.com/lacryptora"
 
 - type: twitter
   icon: "fa-brands fa-x-twitter"
+   url: "https://x.com/lacryptora"
+  
+
+- type: linkedin
+   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+   url:  'https://www.linkedin.com/in/shaimaa-khattab/'                  # Fill with your Linkedin homepage
 
 #- type: email
  # icon: "fas fa-envelope"
@@ -19,9 +26,7 @@
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
 #
- - type: linkedin
-   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-   url:  'https://www.linkedin.com/in/shaimaa-khattab/'                  # Fill with your Linkedin homepage
+
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
