Switch to remote_theme for Chirpy

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # The Site Configuration
 
 # Import the theme
-theme: jekyll-theme-chirpy
+remote_theme: cotes2020/jekyll-theme-chirpy
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -153,8 +153,14 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
-#plugins:
- # - jemoji
+plugins:
+  - jemoji
+  - jekyll-remote-theme
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-archives
 # ------------ The following options are not recommended to be modified ----------------
 
 kramdown:
@@ -248,7 +254,7 @@ exclude:
   - purgecss.js
   - rollup.config.js
   - package*.json
- # - "*.sh"
+  - "*.sh"
 
 jekyll-archives:
   enabled: [categories, tags]
