--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # The Site Configuration
 
 # Import the theme
-theme: jekyll-theme-chirpy
 
+remote_theme: cotes2020/jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
@@ -155,6 +155,14 @@ paginate: 10
 baseurl: ""
 #plugins:
  # - jemoji
+plugins:
+  - jekyll-remote-theme
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-archives
+ 
 # ------------ The following options are not recommended to be modified ----------------
 
 kramdown:
